[package]
name = "mlua-sys"
version = "0.8.3"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
rust-version = "1.71"
edition = "2021"
repository = "https://github.com/mlua-rs/mlua"
documentation = "https://docs.rs/mlua-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
license = "MIT"
links = "lua"
build = "build/main.rs"
description = """
Low level (FFI) bindings to Lua 5.4/5.3/5.2/5.1 (including LuaJIT), Roblox Luau and Factorio flua
"""

[package.metadata.docs.rs]
features = ["flua", "vendored"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
lua54 = ["lua-src"]
lua53 = ["lua-src"]
lua52 = ["lua-src"]
lua51 = ["lua-src"]
luajit = ["luajit-src"]
luajit52 = ["luajit"]
luau = ["luau0-src"]
luau-codegen = ["luau"]
luau-vector4 = ["luau"]
flua = ["flua-src"]
vendored = []
external = []
module = []

[dependencies]

[build-dependencies]
cc = "1.0"
cfg-if = "1.0"
pkg-config = "0.3.17"
lua-src = { version = ">= 548.1.0, < 548.2.0", optional = true }
luajit-src = { version = ">= 210.6.0, < 210.7.0", optional = true }
luau0-src = { version = "0.15.4", optional = true }
flua-src = { git = "https://github.com/fgardt/flua-src-rs.git", optional = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(raw_dylib)'] }
